# tersh

./: .gitignore  .npmrc  README.md  SECURITY.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: release.yml
backend/: Cargo.toml  tauri.conf.json
backend/.cargo/: config.toml
backend/capabilities/: default.json
backend/icons/: icon.icns
backend/src/: commands.rs  errors.rs  lib.rs  local_terminal.rs  main.rs  sessions.rs  transfers.rs
backend/src/agent_detect/: mod.rs
backend/src/brain/: embed.rs  index.rs  lineage.rs  mod.rs  ngram.rs  resolve.rs  storage.rs  tools.rs  watcher.rs
backend/src/sftp/: mod.rs
backend/src/ssh/: auth.rs  mod.rs
backend/src/tunnels/: mod.rs
backend/src/vault/: crypto.rs  mod.rs
frontend/: index.html  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  styles.css  types.ts
frontend/src/assets/: os-icons.tsx
frontend/src/components/: Collaborator.tsx  CollaboratorFileTree.tsx  CollaboratorTerminalGuest.tsx  CollaboratorWebviewTile.tsx  CommandPalette.tsx  ConnectingView.tsx  Drawer.tsx  HostGrid.tsx  HostInspector.tsx  KeychainPage.tsx  KnownHostsPage.tsx  ListEmpty.tsx  SftpPage.tsx  Sidebar.tsx  SnippetsPage.tsx  TabStrip.tsx  TerminalView.tsx  TopBar.tsx  TunnelsPage.tsx  VaultGlyph.tsx  VaultsMenu.tsx
frontend/src/lib/: api.ts  appearance.ts  commandHistory.ts  promptDiff.ts  promptEnhancer.ts  shellCwd.ts
frontend/src/themes/: index.ts
scripts/: dev-runner.sh
